# aio-coding-hub

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  README.md  README_EN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: main-core.json
src-tauri/src/: gateway.rs  lib.rs  main.rs  test_support.rs
src-tauri/src/app/: cleanup.rs  cli_proxy_service.rs  gateway_control.rs  gateway_runtime_access.rs  gateway_state.rs  heartbeat_watchdog.rs  mod.rs  notification_sound.rs  plugin_registry.rs  plugin_service.rs  provider_service.rs  resident.rs  settings_service.rs  startup_tasks.rs
src-tauri/src/app/plugins/: access_policy.rs  contribution_registry.rs  extension_host.rs  extension_host_process.rs  extension_host_registry.rs  extension_host_worker.rs  extension_protocol_bridge.rs  mod.rs  official.rs  official_privacy_filter_runtime.rs  privacy_redaction_service.rs  process_runtime.rs  rule_runtime.rs  runtime_cache.rs  runtime_executor.rs  runtime_lifecycle.rs  runtime_manager.rs
src-tauri/src/commands/: cli_manager.rs  cli_proxy.rs  data_management.rs  desktop.rs  diagnostics.rs  mod.rs  model_prices.rs  plugins.rs  registry.rs  request_logs.rs  settings.rs  sort_modes.rs  usage.rs
src-tauri/src/commands/providers/: account_usage.rs  crud.rs  mod.rs
src-tauri/src/domain/: cost.rs  cost_stats.rs  mod.rs  plugin_contributions.rs  plugins.rs  prompts.rs  provider_account_usage.rs  provider_availability.rs  provider_limit_usage.rs  provider_oauth_limits.rs  sort_modes.rs  usage.rs
src-tauri/src/domain/claude_model_validation/: execute.rs
src-tauri/src/domain/cli_sessions/: claude.rs  codex.rs
src-tauri/src/domain/cost/: tests.rs
src-tauri/src/domain/providers/: mod.rs  queries.rs  tests.rs  types.rs  validation.rs
src-tauri/src/domain/usage/: tests.rs
src-tauri/src/domain/usage_stats/: bounds.rs  cache_rate_trend_v1.rs  day_detail.rs  folders.rs  input.rs  leaderboard_range.rs  leaderboard_v2.rs  mod.rs  summary.rs  tests.rs  tokens.rs  types.rs
src-tauri/src/gateway/: active_requests.rs  control_service.rs  events.rs  manager.rs  model_route_mapping.rs  routes.rs  runtime.rs  session_manager.rs  streams.rs  util.rs
src-tauri/src/gateway/plugins/: audit.rs  context.rs  contract.rs  mod.rs  mutation.rs  permissions.rs  pipeline.rs  registry.rs
src-tauri/src/gateway/proxy/: abort_guard.rs  error_code.rs  errors.rs  failover.rs  logging.rs  mod.rs  provider_router.rs  request_context.rs  request_end.rs  sse.rs  status_override.rs  tests.rs
src-tauri/src/gateway/response_fixer/: mod.rs  tests.rs
src-tauri/src/gateway/streams/: finalize.rs  plugin_chunk.rs  request_end.rs  timing.rs  types.rs  usage_tee.rs
src-tauri/src/infra/: cli_manager.rs  codex_provider_sync.rs  data_management.rs  mod.rs  request_logs.rs
src-tauri/src/infra/cli_proxy/: codex.rs  (+1 more)
src-tauri/src/shared/: circuit_breaker.rs
src-tauri/tests/: cli_proxy_startup_recovery.rs  codex_config_toml_raw.rs  codex_provider_sync.rs  providers_crud.rs  settings_crud.rs  skills_return_to_local.rs  skills_symlink_conflict.rs  skills_update.rs  support.rs
(+512 files in other folders)
