[package]
name = "aio-coding-hub"
version = "0.60.21"
description = "AIO Coding Hub"
authors = ["dyndynjyxa"]
edition = "2021"
default-run = "aio-coding-hub"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aio_coding_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = "2"
rand = "0.8"
bytes = "1"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "process", "sync", "time", "io-util"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls-native-roots", "stream", "socks", "macos-system-configuration"] }
if-addrs = "0.13"
hostname = "0.4"
futures-core = "0.3"
flate2 = "1.1.5"
zip = { version = "4.6", default-features = false, features = ["deflate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
tracing-appender = "0.2"
tracing-log = "0.2"
thiserror = "2"
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
regex = "1"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-dialog = "2"
rodio = { version = "0.21.1", default-features = false, features = ["playback", "mp3"] }
rquickjs = { version = "0.12.0", default-features = false, features = ["std"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Registry", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
junction = "1"

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }
tower = { version = "0.5", features = ["util"] }

[patch.crates-io]
# Patch `mac-notification-sys` so notifications can still present when app is foreground on macOS.
mac-notification-sys = { path = "patches/mac-notification-sys" }
# Patch `auto-launch` to quote Windows Run entry executable paths that contain spaces
# (e.g. MSI installs under `C:\Program Files\...`), otherwise Windows may try to run `C:\Program`.
auto-launch = { path = "patches/auto-launch" }

[profile.release]
lto = true
strip = true
opt-level = "s"
